--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
+  "name": "playwright-tests-demo",
+  "version": "1.0.0",
+  "scripts": {
+    "test": "playwright test",
+    "test:report": "playwright test --reporter=html && playwright show-report"
+  },
   "devDependencies": {
-    "@playwright/test": "^1.55.0"
+    "@playwright/test": "^1.46.0"
   }
 }
